plugins {
    id("java")
    id("application")
}

group = "dev.onistone"
version = "0.3.0-beta.1"

// OneDrive and antivirus scanners can transiently lock Gradle's class directories on Windows.
// CI and local release jobs may place disposable intermediates on a local scratch volume while
// keeping the final standalone jar in OniLink/dist.
providers.environmentVariable("ONILINK_BUILD_DIR").orNull?.let {
    layout.buildDirectory.set(file(it))
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

dependencies {
    implementation("org.cloudburstmc.protocol:bedrock-codec")
    implementation("org.cloudburstmc.protocol:bedrock-connection")
    implementation("org.xerial:sqlite-jdbc:3.49.1.0")
    implementation("nl.martijndwars:web-push:5.1.1")
    runtimeOnly("org.slf4j:slf4j-simple:1.7.36")

    testImplementation(platform("org.junit:junit-bom:5.11.4"))
    testImplementation("org.junit.jupiter:junit-jupiter")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

application {
    mainClass.set("dev.onistone.onilink.OniLink")
}

val dashboardDirectory = layout.projectDirectory.dir("dashboard-ui")
val dashboardDistribution = dashboardDirectory.dir("dist")
val npmExecutable = if (System.getProperty("os.name").lowercase().contains("windows")) "npm.cmd" else "npm"

val npmInstall by tasks.registering(Exec::class) {
    group = "build"
    description = "Installs the locked dashboard build dependencies."
    workingDir(dashboardDirectory)
    commandLine(npmExecutable, "ci", "--no-audit", "--no-fund")
    inputs.files(dashboardDirectory.file("package.json"), dashboardDirectory.file("package-lock.json"))
    // npm writes this marker from the lockfile. Tracking the whole dependency tree makes Gradle
    // recursively snapshot tens of thousands of OneDrive files before every task invocation.
    outputs.file(dashboardDirectory.file("node_modules/.package-lock.json"))
}

val dashboardBuild by tasks.registering(Exec::class) {
    group = "build"
    description = "Builds the embedded React control plane."
    dependsOn(npmInstall)
    workingDir(dashboardDirectory)
    commandLine(npmExecutable, "run", "build")
    inputs.files(
        dashboardDirectory.file("package.json"),
        dashboardDirectory.file("package-lock.json"),
        dashboardDirectory.file("index.html"),
        dashboardDirectory.file("tsconfig.json"),
        dashboardDirectory.file("tsconfig.app.json"),
        dashboardDirectory.file("tsconfig.node.json"),
        dashboardDirectory.file("vite.config.ts")
    )
    inputs.dir(dashboardDirectory.dir("src"))
    outputs.dir(dashboardDistribution)
}

sourceSets.main {
    // The production resource tree is generated by Vite. The legacy files remain excluded until
    // frontend parity validation is complete, preventing duplicate index.html entries in the JAR.
    resources.exclude("dashboard/**")
}

// Ship the documented config template inside the jar. Only the jar is uploaded to a backend, so
// this file is the ONLY configuration documentation that reaches production — ProxyConfig writes it
// verbatim the first time it starts without a config. Keeping the single copy at the project root
// means the version people read in the repo is byte-for-byte the version they get on the server.
tasks.processResources {
    dependsOn(dashboardBuild)
    from("onilink.example.properties")
    from(dashboardDistribution) {
        into("dashboard")
    }
}

val standaloneJar by tasks.registering(Jar::class) {
    group = "build"
    description = "Builds a single runnable OniLink jar for distribution."
    archiveFileName.set("OniLink.jar")
    destinationDirectory.set(layout.projectDirectory.dir("dist"))
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    manifest {
        attributes["Main-Class"] = application.mainClass.get()
        attributes["Implementation-Title"] = "OniLink"
        attributes["Implementation-Version"] = project.version
    }

    from(sourceSets.main.get().output)
    dependsOn(configurations.runtimeClasspath)
    from({
        configurations.runtimeClasspath.get()
            .filter { it.exists() }
            .map { if (it.isDirectory) it else zipTree(it) }
    })

    exclude(
        "META-INF/*.DSA",
        "META-INF/*.RSA",
        "META-INF/*.SF"
    )
}

tasks.named("assemble") {
    dependsOn(standaloneJar)
}

tasks.test {
    useJUnitPlatform()

    // Some tests exercise the real login validator, and CloudburstMC's EncryptionUtils fetches Mojang's
    // discovery document over HTTPS in its static initialiser. Tests are forked, so a truststore
    // override on the Gradle JVM does not reach them — forward it explicitly. Needed on machines where
    // TLS is intercepted (Norton does this here); those tests skip themselves when it is absent rather
    // than failing, so nothing depends on this being set.
    // javabridge.viaProxyJar opts into the end-to-end Java join test, which needs a ViaProxy.jar that
    // is too large to vendor. Without it that test skips.
    for (key in listOf(
        "javax.net.ssl.trustStore",
        "javax.net.ssl.trustStorePassword",
        "javabridge.viaProxyJar",
        "proxy.logPackets",
        "proxy.traceBridgeDatagrams",
        "org.slf4j.simpleLogger.defaultLogLevel"
    )) {
        System.getProperty(key)?.let { systemProperty(key, it) }
    }
}

val forgeReports by tasks.registering(JavaExec::class) {
    group = "verification"
    description = "Generates evidence-based protocol compatibility artifacts."
    dependsOn(tasks.named("classes"))
    classpath = sourceSets.main.get().runtimeClasspath
    mainClass.set("dev.onistone.onilink.modules.forge.ForgeCli")
    args(layout.projectDirectory.dir("build/forge").asFile.absolutePath)
}

tasks.named("check") {
    dependsOn(forgeReports)
}
